#
# some news ... see also TODO for hints
#


2017-11-26 -> some rework of the init parts

2017-11-05 -> start to implement new libgame based on the stuff i learned from
	      first_try

2017-11-04 -> add skeleton for another object fab which shows the new additional
	      configuration features
	   -> some cleanups
	   -> a complete reorg and start with some more experiments

2017-11-01 -> add some more pixel-art
	      - flask for heal and mana
	      - heart pack

2017-10-19 -> do some rework around the detection functions
	      add some more simple detection functions
	      do some rework regarding setup_main_window

2017-10-18 -> some first step towards simple_tennis

2017-10-17 -> add pixel-objects for simple_tennis example
	      first implementation of the simple_tennis example

2017-10-16 -> some fixes around the joystick fab
	   -> add skeleton for a fist simple game -> simple_tennis (something
	      like pong clone)
	   -> add skeleton for simple ai demo

2017-10-15 -> finalize joystick fab
	   -> add some functions/macros around the joystick fab

2017-10-14 -> add some minor steps towards joystick fab

2017-10-11 -> add next steps towards joystick fab
	   -> fix missing free of joystick array

2017-10-10 -> add first steps for something like joystick fab (similiar to object fab)

2017-10-09 -> add skeleton for object_fab_xml.c which should provide the same parts
	      via libxml (and xml based config-file) like object_fab.c (uses libconfig)

2017-10-08 -> do some renaming for more consistense function names
	   -> do some cleanups and locate all functions using libconfig to object_fab

2017-10-05 -> add some new artwork
	   -> add first multiple joystick handling to object_fab example
	   -> add skelton for joystick configuration via config file

2017-10-04 -> add some new artwork
	   -> let object-fab demo use the new artwork

2017-10-03 -> some minor updates/adds regarding textures and co